[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/buy_ui/tower_buy_button.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="TowerBuyButton" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
text = "Name"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0

[node name="Food" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0

[node name="FoodNameLabel" type="Label" parent="VBoxContainer/Food"]
margin_right = 44.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Food:"

[node name="FoodCount" type="Label" parent="VBoxContainer/Food"]
margin_left = 48.0
margin_right = 64.0
margin_bottom = 14.0
text = "10"

[node name="Gold" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 32.0

[node name="GoldNameLabel" type="Label" parent="VBoxContainer/Gold"]
margin_right = 44.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Gold:"

[node name="GoldCount" type="Label" parent="VBoxContainer/Gold"]
margin_left = 48.0
margin_right = 64.0
margin_bottom = 14.0
text = "10"
